[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"  # Downgraded to 0.7 to align with ed25519-dalek's rand_core
sha2 = "0.10"  # Provides SHA-256 and Digest traits
aes = "0.7"
block-modes = "0.8"
hex = "0.4"
ed25519-dalek = { version = "1.0", features = ["rand"] }
once_cell = "1.9"
